Insignificant changing of casing.

--- a/source/_posts/2011-10-10-oop-vs-dop.markdown
+++ b/source/_posts/2011-10-10-oop-vs-dop.markdown
@@ -75,7 +75,7 @@ side.
 
 Let's improve on this DOP way by trying the hybrid approach.
 
-## 2) The hybrid way
+## 2) The Hybrid Way
 
 Using the original modelling, we do:
 
